# skye-lang

./: .gitignore  Cargo.toml  README.md  build.rs  publish.py
.cargo/: config.toml
.github/workflows/: publish.yml  test.yml  test_windows.yml
examples/: fibonacci.skye
lib/: build.skye  std.skye
lib/core/: builtins.skye  core.skye  internals.h  io_primitives.skye
lib/std/: collections.skye  math.skye  os.skye  random.skye
src/: ast.rs  backend.rs  codegen.rs  constant_folder.rs  environment.rs  import_processor.rs  ir.rs  irgen.rs  lib.rs  macro_expander.rs  main.rs  parser.rs  scanner.rs  skye_type.rs  tokens.rs  type_system.rs  utils.rs
src/ast/: constant_folder.rs  macro_expander.rs  mod.rs
src/backends/: c.rs
src/parser/: mod.rs  scanner.rs
tests/: build.skye  import_flags.skye  import_namespace.skye  namespaced_std_os.skye  std.skye
