[package]
name = "skye"
version = "2025.6.20"
edition = "2021"
description = "Skye ~ The retrofuturistic programming language"

[profile.dev]
opt-level = 3

[profile.release]
lto = true

[dependencies]
colored = "2.1.0"
clap = { version = "4.5.13", features = ["derive"] }
zip = "2.2.0"
scopeguard = "1.2.0"
serde_json = "1.0.127"
reblessive = "0.4.0"
lazy_static = "1.5.0"
enum_dispatch = "0.3.13"

[build-dependencies]
convert_case = "0.6.0"