[package]
name = "skye"
version = "2025.8.4"
edition = "2021"
description = "Skye ~ The retrofuturistic programming language"

[profile.dev]
opt-level = 3

[profile.release]
lto = true

[dependencies]
alanglib = { git = "https://github.com/amari-calipso/alanglib.git", features = ["colored"] }
clap = { version = "4.5.13", features = ["derive"] }
zip = "2.2.0"
scopeguard = "1.2.0"
serde_json = "1.0.127"
reblessive = "0.4.0"
lazy_static = "1.5.0"
topo_sort = "0.4.0"
